@@ -2,23 +2,13 @@ package com.spa.ecommerce.order;
 
 import com.spa.ecommerce.order.dto.OrderDTO;
 import com.spa.ecommerce.order.dto.OrderDTOMapper;
-import com.spa.ecommerce.order.orderitem.ItemRepository;
-import com.spa.ecommerce.order.orderitem.OrderItem;
-import com.spa.ecommerce.order.orderitem.dto.OrderItemDTOMapper;
 import com.spa.ecommerce.product.entity.Product;
-import com.spa.ecommerce.product.repository.ProductRepository;
-import com.spa.ecommerce.shoppingcart.CartItem.entity.CartItem;
-import com.spa.ecommerce.shoppingcart.CartItem.repository.CartItemRepository;
 import com.spa.ecommerce.shoppingcart.ShoppingCart;
-import com.spa.ecommerce.shoppingcart.ShoppingCartRepository;
-import com.spa.ecommerce.user.User;
-import com.spa.ecommerce.user.UserRepository;
-import jakarta.transaction.Transactional;
+import com.spa.ecommerce.shoppingcart.ShoppingCartDTO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.security.Principal;
-import java.time.LocalDate;
+import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -43,85 +33,46 @@ public class OrderServiceImpl implements OrderService {
     @Autowired
     private ProductRepository productRepository;
 
-    @Transactional
-    public OrderDTO placeOrder(Principal principal, OrderDTO orderDTO) {
-        String email = principal.getName();
-        Optional<User> userOptional = userRepository.findByEmail(email);
-        if (userOptional.isPresent()) {
-            User user = userOptional.get();
-            ShoppingCart cart = shoppingCartRepository.findByBuyerId(user.getId());
-            if (!cart.getCartItems().isEmpty()) {
-                Order order = new Order();
-                order.setBuyer(user);
-                order.setDate(LocalDate.now());
-                order.setStatus(Status.PENDING);
-                order.setAmount(cart.getTotalPrice());
-                order.setPaymentMethod(orderDTO.getPaymentMethod());
-
-                for (CartItem cartItem : cart.getCartItems()) {
-                    OrderItem orderItem = new OrderItem();
-                    orderItem.setOrder(order);
-                    orderItem.setQuantity(cartItem.getQuantity());
-                    orderItem.setProduct(cartItem.getProduct());
-                    orderItem.setPrice(cartItem.getPrice());
-
-                    Product product = cartItem.getProduct();
-                    product.setInStock(product.getInStock() - orderItem.getQuantity());
-                    product.setTimesBought(product.getTimesBought() + orderItem.getQuantity());
-
-                    order.getOrderItems().add(orderItem);
-                }
-
-                order = orderRepository.save(order); // Save order with order items due to cascading
-
-                // Ensure products are saved
-                productRepository.saveAll(cart.getCartItems().stream().map(CartItem::getProduct).toList());
-
-                cartItemRepository.deleteAll(cart.getCartItems());
-                cart.getCartItems().clear();
-                cart.setTotalPrice(0.0);
-                shoppingCartRepository.save(cart);
-
-                return orderDTOMapper.apply(order);
-            }
-        }
-        throw new RuntimeException("Order Cannot be placed");
+    @Override
+    public Collection<OrderDTO> getAll() {
+        return orderRepository.findAll().stream().map(orderDTOMapper).collect(Collectors.toList());
     }
 
 
     @Override
-    public OrderDTO findById(long id) {
-        return orderRepository.findById(id)
-                .map(orderDTOMapper)
-                .orElse(null);
+    public Optional<OrderDTO> get(Long id) {
+        return orderRepository.findById(id).map(orderDTOMapper);
     }
 
-//    @Override
-//    public Optional<OrderDTO> update(long id) {
-//        Order existingOrder = orderRepository.findById(id).orElse(null);
-//        Status currentStatus = existingOrder.getStatus();
-//        if(currentStatus == Status.PENDING || currentStatus == Status.PROCESSING){
-//            existingOrder.setStatus(Status.CANCELLED);
-//            orderRepository.save(existingOrder);
-//            return Optional.of(orderDTOMapper.apply(existingOrder));
-//        }else {
-//            return Optional.empty();
-//        }
-//
-//
-//    }
+    @Override
+    public Optional<OrderDTO> save(OrderDTO entity) {
+        Order order = new Order();
+        order.setStatus(entity.getStatus());
+        order = orderRepository.save(order);
+        return Optional.of(orderDTOMapper.apply(order));
+    }
 
     @Override
-    public List<OrderDTO> findAll(Principal principal) {
-        String email = principal.getName();
-        Optional<User> userOptional = userRepository.findByEmail(email);
-        if (userOptional.isPresent()) {
-            List<Order> orders = orderRepository.findByBuyerId(userOptional.get().getId());
-            return orders
-                    .stream()
-                    .map(orderDTOMapper)
-                    .collect(Collectors.toList());
+    public Optional<OrderDTO> update(Long id, OrderDTO entity) {
+        Optional<Order> existingOrderOpt = orderRepository.findById(id);
+        if (existingOrderOpt.isPresent()) {
+            Order existingOrder = existingOrderOpt.get();
+            existingOrder.setStatus(entity.getStatus());
+            orderRepository.save(existingOrder);
+            return Optional.of(orderDTOMapper.apply(existingOrder));
+        } else {
+            return Optional.empty();
         }
-        return null;
+    }
+
+    @Override
+    public Optional<OrderDTO> delete(Long id, OrderDTO entity) {
+        Optional<Order> existingOrderOpt = orderRepository.findById(id);
+        if (existingOrderOpt.isPresent()) {
+            orderRepository.deleteById(id);
+            return Optional.of(orderDTOMapper.apply(existingOrderOpt.get()));
+        } else {
+            return Optional.empty();
+        }
     }
 }
